// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <List> 1`] = `
.c0 {
  margin: 0;
  padding-left: 1.5rem;
  list-style-type: none;
  padding-left: 0;
}

<ul
  className="c0"
/>
`;

exports[`should render a decorated <List> 1`] = `
.c0 {
  margin: 0;
  padding-left: 1.5rem;
}

<ul
  className="c0"
/>
`;
